# cmake-pre-commit-hooks

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  MANIFEST.in  README.md  codecov.yml  environment.yml  pyproject.toml  setup.cfg  setup.py  sonar-project.properties
.github/workflows/: ci.yml  codeql-analysis.yml  draft_release.yml  format.yml  pre-commit-ci.yml  publish_release.yml  pull_request.yml
cmake_pc_hooks/: __init__.py  _argparse.py  _argparse_utils.py  _call_process.py  _cmake.py  _utils.py  clang_format.py  clang_tidy.py  cppcheck.py  cpplint.py  include_what_you_use.py  lizard.py
misc/: license_header.txt
tests/: run_tests.ps1  run_tests.sh
tests/cmake_bad/: .pre-commit-config.yaml  .pre-commit-win.yaml  CMakeLists.txt  bad.cpp
tests/cmake_good/: .pre-commit-config.yaml  .pre-commit-win.yaml  CMakeLists.txt  good.cpp
tests/python/: _argparse_test.py  _call_process_test.py  _cmake_test.py  _test_utils.py  _utils_test.py  clang_format_test.py  clang_tidy_test.py  conftest.py  cppcheck_test.py  cpplint_test.py  iwyu_test.py  lizard_test.py
