[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=6"]
build-backend = "setuptools.build_meta"

# ==============================================================================

[project]
name = 'cmake_pre_commit_hooks'
authors = [
    {name = 'Damien Nguyen', email = 'ngn.damien@gmail.com'},
]
description = 'pre-commit hooks for CMake-based projects'
readme = 'README.md'
requires-python = '>=3.8'
keywords = [
]
license = {text = 'Apache2'}
classifiers = [
     'License :: OSI Approved :: Apache Software License',
     'Programming Language :: Python :: 3',
     'Programming Language :: Python :: 3 :: Only',
     'Programming Language :: Python :: 3.8',
     'Programming Language :: Python :: 3.9',
     'Programming Language :: Python :: 3.10',
     'Programming Language :: Python :: 3.11',
     'Programming Language :: Python :: 3.12',
]
dependencies = [
    'toml',
    'CLinters>=1.3.0',
    'fasteners',
    'filelock',
    'attrs>=23'
]
dynamic = ['version']

[project.urls]
Homepage = 'https://github.com/Takishima/cmake-pre-commit-hooks'
Pypi = 'https://pypi.org/project/cmake-pre-commit-hooks/'
Repository = 'https://github.com/Takishima/cmake-pre-commit-hooks'
Issues = 'https://github.com/Takishima/cmake-pre-commit-hooks/issues'
Changelog = 'https://github.com/Takishima/cmake-pre-commit-hooks/blob/main/CHANGELOG.md'

[project.optional-dependencies]
clang-format = ['clang-format']
clang-tidy = ['clang-tidy']
lizard = ['lizard']
test = ['pytest', 'pytest-cov', 'pytest-mock', 'mock']

[project.scripts]
cmake-pc-clang-format-hook = 'cmake_pc_hooks.clang_format:main'
cmake-pc-clang-tidy-hook = 'cmake_pc_hooks.clang_tidy:main'
cmake-pc-cppcheck-hook = 'cmake_pc_hooks.cppcheck:main'
cmake-pc-cpplint-hook = 'cmake_pc_hooks.cpplint:main'
cmake-pc-include-what-you-use-hook = 'cmake_pc_hooks.include_what_you_use:main'
cmake-pc-lizard-hook = 'cmake_pc_hooks.lizard:main'

[tool.distutils.bdist_wheel]
universal = true

[tool.setuptools.packages.find]
include = ['cmake_pc_hooks']
namespaces = false

# ==============================================================================

[tool.ruff]
line-length = 120
target-version = 'py38'

select = ['F',     # pyflakes
          'E',     # pycodestyle
          'W',     # pycodestyle
          'C90',   # mccabe
          'I',     # isort
          'N',     # pep8-naming
          'D',     # pydocstyle
          'UP',    # pyupgrade
          'YTT',   # flake-2020
          'ANN',   # flake8-annotations
          'ASYNC', # flake8-async
          'TRIO',  # flake8-trio
          'S',     # flake8-bandit
          'BLE',   # flake8-blind-except
          'FBT',   # flake8-boolean-trap
          'B',     # flake8-bugbear
          'A',     # flake8-builtins
          'C4',    # flake8-comprehensions
          'DTZ',   # flake8-datetimez
          'T10',   # flake8-debugger
          'EM',    # flake8-errmsg
          'EXE',   # flake8-executable
          'FA',    # flake8-future-annotations
          'ISC',   # flake8-implicit-str-concat
          'ICN',   # flake8-import-conventions
          'G',     # flake8-logging-format
          'PIE',   # flake8-pie
          'PT',    # flake8-pytest-style
          'Q',     # flake8-quotes
          'RSE',   # flake8-raise
          'RET',   # flake8-return
          'SLF',   # flake8-self
          'SLOT',  # flake8-slots
          'SIM',   # flake8-simplify
          'TID',   # flake8-tidy-imports
          'TCH',   # flake8-type-checking
          'INT',   # flake8-gettext
          'ARG',   # flake8-unused-arguments
          'PTH',   # flake8-use-pathlib
          'TD',    # flake8-todos
          'FIX',   # flake8-fixme
          'ERA',   # eradicate
          'PL',    # pylint
          'TRY',   # tryceratops
          'FLY',   # flynt
          'NPY',   # numpy specific rules
          'PERF',  # perflint
          'FURB',  # refurb
          'LOG',   # flake8-logging
          'RUF',   # ruff-specific rules
]

ignore = ['ANN101', # missing-type-self
          'D203',   # one-blank-line-before-class
          'D212',   # multi-line-summary-first-line
          'S603',    # subprocess-without-shell-equals-true
          # Ignore rulues below are actually to prevent conflicts between formatting and linting (with fixing)
          # cf. https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
          'COM812',  # missing-trailing-comma
          'COM819',  # prohibited-trailing-comma
          'D206',    # indent-with-spaces
          'E111',    # indentation-with-invalid-multiple
          'E114',    # indentation-with-invalid-multiple-comment
          'E117',    # over-indented
          'ISC001',  # single-line-implicit-string-concatenation
          'ISC002',  # multi-line-implicit-string-concatenation
          'Q000',    # bad-quotes-inline-string
          'Q001',    # bad-quotes-multiline-string
          'Q002',    # bad-quotes-docstring
          'Q003',    # avoidable-escaped-quote
          'S603',    # subprocess-without-shell-equals-true
          'W191',    # tab-indentation
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = 'lf'
skip-magic-trailing-comma = false

[tool.ruff.per-file-ignores]

'tests/python/*.py' = ['S101', 'SLF001', 'PLR0913', 'PLR2004', 'D']


[tool.ruff.flake8-annotations]
allow-star-arg-any = true
ignore-fully-untyped = true
mypy-init-return = true
suppress-dummy-args = true
suppress-none-returning = true

[tool.ruff.flake8-quotes]
docstring-quotes = 'double'
inline-quotes = 'single'
multiline-quotes = 'single'

[tool.ruff.isort]
combine-as-imports = true
section-order = ["future", "standard-library", "first-party", "third-party", "local-folder"]
split-on-trailing-comma = false

[tool.ruff.pydocstyle]
convention = 'google'

# ------------------------------------------------------------------------------

[tool.check-manifest]
ignore = [
'PKG-INFO',
'*.egg-info',
'*.egg-info/*',
'.hgtags',
'.hgsigs',
'.hgignore',
'.gitignore',
'.bzrignore',
'.gitattributes',
'.github/*',
'.travis.yml',
'Jenkinsfile',
'*.mo',
'.gitmodules',
'VERSION.txt',
'.editorconfig',
'.envrc',
'*.yml',
'*.yaml',
'MANIFEST.in',
'docs/*',
'docs/images/*',
'misc/*',
'tests/*',
'tests/cmake_bad/*',
'tests/cmake_good/*'
]


[tool.coverage]
[tool.coverage.run]
omit = [
'test_*.py',
]

[tool.pytest.ini_options]
minversion = '6.0'
testpaths = ['tests/python']
mock_use_standalone_module = true

[tool.setuptools_scm]
write_to = 'VERSION.txt'
write_to_template = '{version}'
local_scheme = 'no-local-version'
