[metadata]
name = cmake_pre_commit_hooks
description = pre-commit hooks for CMake based projects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Takishima/cmake-pre-commit-hooks
author = Damien Nguyen
author_email = ngn.damien@gmail.com
license = Apache2
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options]
packages = find:
python_requires = >=3.6.1
install_requires =
    CLinters >= 1.3.0
    fasteners

[options.entry_points]
console_scripts =
    cmake-pc-clang-format-hook = cmake_pc_hooks.clang_format:main
    cmake-pc-clang-tidy-hook = cmake_pc_hooks.clang_tidy:main
    cmake-pc-cppcheck-hook = cmake_pc_hooks.cppcheck:main
    cmake-pc-cpplint-hook = cmake_pc_hooks.cpplint:main
    cmake-pc-include-what-you-use-hook = cmake_pc_hooks.include_what_you_use:main
    cmake-pc-lizard-hook = cmake_pc_hooks.lizard:main


[options.extras_require]

clang-format =
         clang-format
lizard =
         lizard


[bdist_wheel]
universal = True


# ==============================================================================

[flake8]

max-line-length = 120
exclude =
        .git,
        __pycache__,
        build,
        dist,
        __init__.py
docstring-quotes = """

# ==============================================================================
